Fix the build for gcar_emu_x86_64
Bug: 219965014
Change-Id: Id0552843c7842a8d6b7a23adf23335e09bcdd754

--- a/emulator/usbpt/bluetooth/btusb/init.btusb.rc
+++ b/emulator/usbpt/bluetooth/btusb/init.btusb.rc
@@ -2,4 +2,4 @@ on early-init
     write /sys/module/firmware_class/parameters/path /vendor/firmware/
 
 on boot
-    exec u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules vendor_btusb.ko
+    exec u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules btusb.ko
