--- a/emulator/multi-display-emulator/ClusterOsDoubleEmulatorVirtualDisplayOverlay/AndroidManifest.xml
+++ b/emulator/multi-display-emulator/ClusterOsDoubleEmulatorVirtualDisplayOverlay/AndroidManifest.xml
@@ -14,9 +14,12 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<overlay>
-    <item target="array/config_occupant_zones" value="@array/config_occupant_zones" />
-    <item target="array/config_occupant_display_mapping" value="@array/config_occupant_display_mapping" />
-    <item target="bool/enableProfileUserAssignmentForMultiDisplay" value="@bool/enableProfileUserAssignmentForMultiDisplay" />
-    <item target="array/config_allowed_optional_car_features" value="@array/config_allowed_optional_car_features" />
-</overlay>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.android.car.cluster.osdouble.emulator.virtualdisplay.overlay">
+    <application android:hasCode="false"/>
+    <overlay android:priority="1000"
+             android:targetPackage="com.android.car.cluster.osdouble"
+             android:targetName="ClusterOsConfig"
+             android:resourcesMap="@xml/overlays"
+             android:isStatic="true" />
+</manifest>
