--- a/emulator/multi-display-emulator/config.ini
+++ b/emulator/multi-display-emulator/config.ini
@@ -24,3 +24,7 @@ hw.sensor.hinge=no
 hw.display1.width = 400
 hw.display1.height = 600
 hw.display1.density = 120
+# VIRTUAL_DISPLAY_FLAG_OWN_CONTENT_ONLY | VIRTUAL_DISPLAY_FLAG_TRUSTED
+# | VIRTUAL_DISPLAY_FLAG_DESTROY_CONTENT_ON_REMOVAL | VIRTUAL_DISPLAY_FLAG_SUPPORTS_TOUCH = 1352
+hw.display1.flag = 1352
+
