--- a/emulator/multi-display-dynamic/config.ini
+++ b/emulator/multi-display-dynamic/config.ini
@@ -20,11 +20,10 @@ hw.sensors.magnetic_field=no
 hw.sensors.orientation=no
 hw.sensors.temperature=no
 hw.sensor.hinge=no
-# Cluster display
+# Instrument cluster display
 hw.display1.width = 400
 hw.display1.height = 600
 hw.display1.density = 120
 # VIRTUAL_DISPLAY_FLAG_OWN_CONTENT_ONLY | VIRTUAL_DISPLAY_FLAG_TRUSTED
 # | VIRTUAL_DISPLAY_FLAG_DESTROY_CONTENT_ON_REMOVAL | VIRTUAL_DISPLAY_FLAG_SUPPORTS_TOUCH = 1352
 hw.display1.flag = 1352
-
