Update EVS build configuration
To avoid a conflict in building evs_app, this change sets
ENABLE_EVS_SAMPLE as false in the makefile and includes evs_app only if
ENABLE_SAMPLE_EVS_APP is true while ENABLE_EVS_SAMPLE is false.

Also, this adds two more display entries to EVS app configuration
override file.

Bug: 249561857
Test: m -j
Change-Id: I20a5dbd4c1e6279b46185f6a61b00c61d2bc28ec

--- a/emulator/evs/evs_app_config.json
+++ b/emulator/evs/evs_app_config.json
@@ -17,7 +17,20 @@
       "displayPort" : 1,
       "frontRange" : 100,
       "rearRange" : 100
+    },
+    {
+      "_comment": "Display2",
+      "displayPort" : 2,
+      "frontRange" : 100,
+      "rearRange" : 100
+    },
+    {
+      "_comment": "Display3",
+      "displayPort" : 3,
+      "frontRange" : 100,
+      "rearRange" : 100
     }
+
   ],
   "graphic" : {
     "frontPixel" : -20,
