--- a/common/config.ini
+++ b/common/config.ini
@@ -4,6 +4,7 @@ hw.gpu.enabled=yes
 hw.camera.back=none
 hw.camera.front=none
 hw.mainKeys=no
+hw.keyboard=yes
 skin.dynamic=yes
 skin.name=1080x600
 skin.path=1080x600
