--- a/emulator/usbpt/wifi/init.wifiusb.rc
+++ b/emulator/usbpt/wifi/init.wifiusb.rc
@@ -16,4 +16,4 @@ on early-init
     write /sys/module/firmware_class/parameters/path /vendor/firmware/
 
 on boot
-    exec u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules mt76x2u.ko mt76x2_common.ko mt76x0u.ko mt76x02_usb.ko mt76x0_common.ko mt76x02_lib.ko mt76_usb.ko mt76.ko
+    exec u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules mt76.ko mt76-usb.ko mt76x02-lib.ko mt76x02-usb.ko mt76x0-common.ko mt76x0u.ko mt76x2-common.ko mt76x2u.ko
