--- a/common/config.ini
+++ b/common/config.ini
@@ -11,6 +11,7 @@ skin.name=1080x600
 skin.path=1080x600
 disk.dataPartition.size=6G
 hw.accelerometer=yes
+hw.accelerometer_uncalibrated=yes
 hw.gyroscope=yes
 hw.sensors.light=no
 hw.sensors.pressure=no
