Correct the resource overlay package name
Bug: 271131946
Test: m -j
Change-Id: I0b247a811d405b24bd9489a3c15e0ab4b48ad7cf

--- a/emulator/evs/rro_overlays/CarEvsServiceOverlay/AndroidManifest.xml
+++ b/emulator/evs/rro_overlays/CarEvsServiceOverlay/AndroidManifest.xml
@@ -15,7 +15,7 @@
   ~ limitations under the License.
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.android.car.resources.vendor">
+          package="com.android.car.resources.carevsservice">
     <application android:hasCode="false"/>
     <overlay android:targetPackage="com.android.car.updatable"
              android:targetName="CarServiceCustomization"
