--- a/common/config.ini
+++ b/common/config.ini
@@ -12,6 +12,24 @@ hw.keyboard=yes
 skin.dynamic=yes
 skin.name=1408x792
 skin.path=1408x792
+### automotive_landscape start
+; skin.name = automotive_landscape
+; skin.path = <android_patch>/device/generic/car/emulator/skins/automotive_landscape
+; hw.initialOrientation = landscape
+### automotive_landscape end
+
+### automotive_large_portrait start
+; skin.name = automotive_large_portrait
+; skin.path = <android_patch>/device/generic/car/emulator/skins/automotive_large_portrait
+; hw.initialOrientation = portrait
+### automotive_large_portrait end
+
+### automotive_ultrawide start
+;  skin.name = automotive_ultrawide
+;  skin.path = <android_patch>/device/generic/car/emulator/skins/automotive_ultrawide
+;  hw.initialOrientation = landscape
+### automotive_ultrawide end
+
 disk.dataPartition.size=6G
 hw.accelerometer=yes
 hw.accelerometer_uncalibrated=yes
